# serve-optimize

./: .gitattributes  .gitignore  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  SECURITY.md  feature_list.json  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  backends.yaml  benchmark_clients.yaml  goals.yaml  models.yaml  overnight_gated_models.tsv  overnight_models.tsv  serving_engines.yaml  telemetry.yaml
docs/: README.md  architecture.md  architecture_rules.md  backend_assumptions.md  compatibility.md  design.md  experiments.md  hardware.md  installation.md  literature-and-landscape.md  overnight_campaign.md  paper-outline.md  product_readiness.md  quickstart.md  release.md  research_package.md  security.md  support_matrix.md  verification.md
docs/decisions/: 0001-measured-runtime-evidence.md  0002-generic-telemetry-capabilities.md  0003-backend-expansion-scope.md
docs/development/: backend_assumptions.md  release.md  verification.md
docs/research/: literature-and-landscape.md  paper-outline.md
examples/: sample_result.json
experiments/: README.md  dry_run.yaml  h200_mig.yaml  rtx_pro_6000.yaml
notebooks/: README.md
requirements/: README.md
requirements/constraints/: sglang.txt  vllm.txt
requirements/profiles/: sglang.txt  telemetry.txt  vllm.txt
scripts/: README.md  env_base_runtime.sh  plot_pareto.py  run_overnight_campaign.sh  summarize_overnight.py  verify_fast.sh  verify_full.sh  verify_install_profile.sh
src/serve_optimize/: __init__.py  aiconfig_parser.py  aiconfig_plans.py  aiconfigurator_bridge.py  backend_status.py  benchmark.py  benchmark_matrix.py  branding.py  budget.py  campaign_plan.py  candidates.py  cli.py  endpoint_benchmark.py  evaluation.py  evidence.py  hardware.py  io.py  landscape.py  managed.py  managed_candidates.py  managed_summary.py  model_store.py  modeling.py  overnight.py  pareto.py  preflight.py  priors.py  real_benchmark.py  recommendation.py  release_check.py  repeatability.py  reporting.py  research_package.py  runtime_environment.py  schemas.py  synthesis.py  telemetry.py  telemetry_check.py  validation.py  validation_campaign.py  (+1 more)
src/serve_optimize/backends/: __init__.py  base.py  factory.py  sglang.py  trt_llm.py  vllm.py
tests/: test_aiconfig_plans.py  test_backend_status.py  test_benchmark_matrix.py  test_budget.py  test_campaign_plan.py  test_candidates.py  test_cli.py  test_endpoint_benchmark.py  test_evaluation.py  test_evidence.py  test_io.py  test_landscape.py  test_managed.py  test_managed_summary.py  test_modeling.py  test_overnight_summary.py  test_pareto.py  test_priors.py  test_real_benchmark.py  test_recommendation.py  test_release_check.py  test_repeatability.py  test_reporting.py  test_research_package.py  test_synthesis.py  test_telemetry_check.py  test_validation.py  test_validation_campaign.py  test_workloads.py
