[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "serve-optimize"
version = "0.1.0"
description = "Energy-aware LLM inference configuration optimization for single-GPU and MIG deployments."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Serve Optimize Contributors" }
]
keywords = [
  "llm",
  "inference",
  "energy",
  "gpu",
  "mig",
  "vllm",
  "mlsys",
  "sustainability"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: System :: Benchmark"
]
dependencies = [
  "rich>=13,<15"
]

[project.optional-dependencies]
runtime = [
  "torch==2.11.0",
  "transformers==5.9.0",
  "huggingface-hub==1.17.0"
]
telemetry = [
  "nvidia-ml-py==13.610.43"
]
aiconfigurator = [
  "aiconfigurator>=0.1"
]
vllm = [
  "vllm==0.23.0",
  "transformers==5.9.0",
  "huggingface-hub==1.17.0",
  "nvidia-ml-py==13.610.43"
]
sglang = [
  "sglang==0.5.13.post1",
  "flash-attn-4==4.0.0b18",
  "sglang-kernel==0.4.3",
  "torch==2.11.0",
  "transformers==5.8.1",
  "huggingface-hub==1.17.0",
  "nvidia-ml-py==13.610.43"
]
plot = [
  "matplotlib>=3.8",
  "pandas>=2.2"
]
dev = [
  "build>=1.2,<2",
  "hatchling>=1.24",
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10"
]
all = [
  "nvidia-ml-py==13.610.43",
  "matplotlib>=3.8",
  "pandas>=2.2"
]

[project.urls]
Homepage = "https://github.com/ssaketh-ch/serve-optimize"
Issues = "https://github.com/ssaketh-ch/serve-optimize/issues"
Documentation = "https://github.com/ssaketh-ch/serve-optimize/tree/main/docs"

[project.scripts]
serve-optimize = "serve_optimize.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/serve_optimize"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
